Set PGC cable default based on compatibility

--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -15,10 +15,10 @@
     </string-array>
 
     <string-array name="cable">
-        <item>None</item>
-        <item>HDMI</item>
-        <item>Component</item>
+        <item>Generic</item>
         <item>VGA</item>
+        <item>Component</item>
+        <item>TV</item>
     </string-array>
     
     <string-array name="themes_app">
