--- a/shell/android-studio/reicast/src/main/res/menu/activity_main.xml
+++ b/shell/android-studio/reicast/src/main/res/menu/activity_main.xml
@@ -25,4 +25,7 @@
     <item android:title="@string/about"
         android:id="@+id/about_menu"
         android:icon="@mipmap/menu_question" />
+    <item
+        android:id="@+id/version_spacer"
+        android:title=""/>
 </menu>
