--- a/shell/android-studio/reicast/src/main/res/layout/configure_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/configure_fragment.xml
@@ -307,13 +307,13 @@
                 android:gravity="center_vertical" >
 
                 <TextView
-                    android:id="@+id/stretch_text"
+                    android:id="@+id/resolution_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:ems="10"
                     android:gravity="center_vertical|left"
-                    android:text="@string/select_stretch" />
+                    android:text="@string/select_resolution" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -322,11 +322,12 @@
                     android:gravity="right"
                     android:orientation="vertical" >
 
-                    <Checkbox
-                        android:id="@+id/stretch_option"
+                    <Spinner
+                        android:id="@+id/resolution_spinner"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:focusable="true" />
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:ems="10" />
                 </LinearLayout>
             </TableRow>
 
