--- a/shell/android-studio/reicast/src/naomi/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/naomi/res/values/donottranslate.xml
@@ -7,6 +7,7 @@
         <item>bin</item>
         <item>dat</item>
         <item>lst</item>
+        <item>zip</item>
     </string-array>
 
 </resources>
