Android: add 7z file type

--- a/shell/android-studio/reicast/src/naomi/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/naomi/res/values/donottranslate.xml
@@ -8,6 +8,7 @@
         <item>dat</item>
         <item>lst</item>
         <item>zip</item>
+        <item>7z</item>
     </string-array>
 
 </resources>
