--- a/shell/android-studio/reicast/src/main/res/layout/content_main.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/content_main.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context=".MainActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
