--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name" translatable="false">reicast</string>
+    <string name="app_name" translatable="false">Flycast</string>
 
     <string name="app_site" translatable="false">reicast.com</string>
 
