--- a/shell/android-studio/reicast/src/naomi/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/naomi/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name" translatable="false">reicast Naomi</string>
+    <string name="app_name" translatable="false">Flycast Naomi</string>
     <string name="flavor" translatable="false">naomi</string>
 
     <string-array name="images">
